# robot-controller-ros

./: .gitignore  CMakeLists.txt  config.xml  config_new.xml  package.xml
ar60x_driver/: CMakeLists.txt  config.xml  package.xml
ar60x_driver/launch/: debug.launch  driver.launch
ar60x_driver/src/AR60xHWDriver/: AR60xHWDriver.cpp  AR60xHWDriver.h  CMakeLists.txt
ar60x_driver/src/AR60xHWDriver/DataTypes/: PowerSources.h  SensorFeetState.h
ar60x_driver/src/AR60xHWDriver/EasyLocker/: EasyLocker.h
ar60x_driver/src/AR60xHWDriver/RobotDescription/: AR60xDescription.h  JointData.h
ar60x_driver/src/AR60xHWDriver/RobotPackets/: AR60xRecvPacket.cpp  AR60xRecvPacket.h  AR60xSendPacket.cpp  AR60xSendPacket.h  BasePacket.h
ar60x_driver/src/AR60xHWDriver/UDPConnection/: UDPConnection.cpp  UDPConnection.h
ar60x_driver/src/AR60xHWDriver/XMLSerializer/: XMLSerializer.cpp  XMLSerializer.h
ar60x_driver/src/ar60x_driver_node/: CMakeLists.txt  ar60x_driver_node.cpp
ar60x_driver/src/ar60x_driver_node/BaseController/: BaseController.cpp
ar60x_driver/src/ar60x_driver_node/JointsController/: JointsController.cpp  JointsController.h
ar60x_driver/src/ar60x_driver_node/PowerController/: PowerController.cpp  PowerController.h
ar60x_driver/src/ar60x_driver_node/SensorsController/: SensorsController.cpp  SensorsController.h
ar60x_driver/src/topic_converters/: CMakeLists.txt  commands_to_state.cpp
launch/: ar60x_driver.launch  rviz.launch
msg/: FeetSensors.msg  JointsCommand.msg  JointsMode.msg  JointsParams.msg  JointsSupplyState.msg  Pid.msg  RobotSupplyState.msg  SourcesSupplyState.msg  TypeJointMode.msg  TypeJointParams.msg  TypePid.msg  TypeSupplyState.msg  joint_supply_state.msg  robot_supply_state.msg  supply_state.msg
robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/msg/: FeetSensors.msg  JointsMode.msg  JointsParams.msg  TypeFootSensor.msg
src/: wtf.cpp
src/AR60xHWDriver/: AR60xHWDriver.cpp  AR60xHWDriver.h  CMakeLists.txt  UDPConnection.cpp  UDPConnection.h  XMLSerializer.cpp
src/AR60xHWDriver/DataTypes/: ConnectionData.cpp  ConnectionData.h  ImuData.h  JointData.h  JointState.h  LegsData.h  PowerData.cpp  PowerData.h  PowerSources.h  PowerState.h  SensorData.cpp  SensorData.h  SensorFeetState.h  SensorImuState.h  SensorState.cpp  SensorState.h  SensorsGroup.h  SensorsGroupData.h
src/AR60xHWDriver/EasyLocker/: EasyLocker.cpp
src/AR60xHWDriver/HardwareInterfaces/: IAR60xJointControl.h  IAR60xJointState.h  IAR60xPowerControl.h  IAR60xSensorState.h
src/AR60xHWDriver/RobotDescription/: AR60xDescription.cpp  AR60xDescription.h  JointData.h  SensorData.h  SensorsGroupData.h
src/AR60xHWDriver/RobotPackets/: AR60xPacketsDefinitions.h  AR60xRecvPacket.cpp  AR60xRecvPacket.h  AR60xSendPacket.cpp  AR60xSendPacket.h  BasePacket.h
src/AR60xHWDriver/UDPConnection/: UDPConnection.cpp  UDPConnection.h
src/AR60xHWDriver/XMLSerializer/: XMLSerializer.cpp
src/AR60x_driver/: AR60x_driver.cpp  CMakeLists.txt  config_converter.cpp  main.cpp
src/AR60x_driver/AR60xHWDriver/: AR60xHWDriver.cpp  AR60xHWDriver.h  CMakeLists.txt  UDPConnection.cpp  UDPConnection.h  XMLSerializer.cpp  XMLSerializer.h
src/AR60x_driver/AR60xHWDriver/DataTypes/: JointData.cpp  JointState.cpp  JointState.h  PowerData.h  PowerState.cpp  SensorData.h
src/AR60x_driver/AR60xHWDriver/HardwareInterfaces/: IAR60xJointControl.h  IAR60xJointState.h  IAR60xPowerControl.h  IAR60xPowerState.h
src/AR60x_driver/AR60xHWDriver/RobotDescription/: AR60xDescription.cpp  AR60xDescription.h
src/AR60x_driver/AR60xHWDriver/RobotPackets/: AR60xPacketsDefinitions.h  AR60xRecvPacket.cpp  AR60xRecvPacket.h  AR60xSendPacket.cpp
src/AR60x_driver/BaseController/: BaseController.cpp  BaseController.h
src/AR60x_driver/JointsController/: JointsController.cpp  JointsController.h
src/AR60x_driver/PowerController/: PowerController.cpp  PowerController.h
src/AR60x_driver/SensorsController/: SensorsController.cpp  SensorsController.h
