<?xml version="1.0"?>
<package format="2">
  <name>ar60x_driver</name>
  <version>0.5.0</version>
  <description>ROS driver for russian humanoid robots AR60x series (AR600, AR600E, AR601 etc)</description>

  <maintainer email="markovalex95@gmail.com">Markov Alexey</maintainer>
  <maintainer email="tarasradio@mail.ru">Tarasov Pavel</maintainer>
  <maintainer email="scorpion_energy@mail.ru">Skorikov Andrey</maintainer>


  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/robot-controller-ros</url> -->

  <author email="markovalex95@gmail.com">Markov Alexey</author>
  <author email="tarasradio@mail.ru">Tarasov Pavel</author>
  <author email="scorpion_energy@mail.ru">Skorikov Andrey</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robot_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <!--<build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>-->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
