<?xml version="1.0"?>
<package format="2">
  <name>robot_msgs</name>
  <version>0.5.0</version>
  <description>Messages for AR60x humanoid robot controll</description>

  <maintainer email="markovalex95@gmail.com">Markov Alexey</maintainer>
  <maintainer email="tarasradio@mail.ru">Tarasov Pavel</maintainer>
  <maintainer email="scorpion_energy@mail.ru">Skorikov Andrey</maintainer>


  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/robot_msgs</url> -->

  <author email="markovalex95@gmail.com">Markov Alexey</author>
  <author email="tarasradio@mail.ru">Tarasov Pavel</author>
  <author email="scorpion_energy@mail.ru">Skorikov Andrey</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
